// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientAppUninstallConfirmation UninstallationsSuccessModal should match a snapshot 1`] = `
<Component
  appDetailData={
    Object {
      "description": "enim facilisis",
      "developer": "Pete's Proptech World Ltd",
      "homePage": "http://myawesomeproptechproduct.io",
      "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
      "media": Array [
        Object {
          "description": "Application Icon",
          "type": "icon",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
        },
      ],
      "name": "Peter's Properties",
      "scopes": Array [
        Object {
          "description": "Read data about developers",
          "name": "Marketplace/developers.read",
        },
        Object {
          "description": "Write data about developers",
          "name": "Marketplace/developers.write",
        },
      ],
      "summary": "vitae elementum curabitur vitae",
      "supportEmail": "support@reapit.com",
      "telephone": "0113 288 2900",
    }
  }
  onSuccessAlertButtonClick={[MockFunction]}
  visible={true}
>
  <Component
    hasHeader={false}
    isCentered={true}
    isPadding={false}
    visible={true}
  >
    <Component
      className=""
      destroyOnClose={true}
      title={<Unknown />}
      visible={true}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <Portal
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="rc-dialog-root"
                >
                  <div
                    class="rc-dialog-mask"
                  />
                  <div
                    aria-labelledby="rcDialogTitle1"
                    class="rc-dialog-wrap "
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="rc-dialog "
                      role="document"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="rc-dialog-content"
                      >
                        <button
                          aria-label="Close"
                          class="rc-dialog-close"
                          type="button"
                        >
                          <span
                            class="rc-dialog-close-x"
                          />
                        </button>
                        <div
                          class="rc-dialog-header"
                        >
                          <div
                            class="rc-dialog-title"
                            id="rcDialogTitle1"
                          >
                            <h4
                              class="modal-card-title is-4 pt-2 pb-2"
                            />
                          </div>
                        </div>
                        <div
                          class="rc-dialog-body"
                        >
                          <div
                            class=""
                            data-test="uinstallations-success-message"
                          >
                            <div
                              class="notification is-success mb-0"
                              data-test=""
                              role="alert"
                            >
                              Success
                            </div>
                            <div
                              class=""
                            >
                              <p>
                                Peter's Properties
                                 has been successfully uninstalled
                              </p>
                              <div
                                class="has-text-right"
                              >
                                <button
                                  class="button  is-primary  "
                                  data-test="uinstallations-success-button"
                                  type="button"
                                >
                                  Back to List
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              className=""
              closable={true}
              destroyOnClose={true}
              focusTriggerAfterClose={true}
              getContainer={[Function]}
              getOpenCount={[Function]}
              keyboard={true}
              mask={true}
              maskClosable={true}
              prefixCls="rc-dialog"
              switchScrollingEffect={[Function]}
              title={<Unknown />}
              visible={true}
              wrapClassName=""
            >
              <div
                className="rc-dialog-root"
              >
                <LazyRenderBox
                  className="rc-dialog-mask"
                  hiddenClassName="rc-dialog-mask-hidden"
                  key="mask"
                  style={Object {}}
                  visible={true}
                >
                  <div
                    className="rc-dialog-mask"
                    style={Object {}}
                  />
                </LazyRenderBox>
                <div
                  aria-labelledby="rcDialogTitle1"
                  className="rc-dialog-wrap "
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseUp={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                    }
                  }
                  tabIndex={-1}
                >
                  <Animate
                    animation={Object {}}
                    component=""
                    componentProps={Object {}}
                    key="dialog"
                    onAppear={[Function]}
                    onEnd={[Function]}
                    onEnter={[Function]}
                    onLeave={[Function]}
                    showProp="visible"
                    transitionAppear={true}
                    transitionEnter={true}
                    transitionLeave={true}
                  >
                    <AnimateChild
                      animation={Object {}}
                      key="dialog-element"
                      transitionAppear={true}
                      transitionEnter={true}
                      transitionLeave={true}
                    >
                      <LazyRenderBox
                        className="rc-dialog "
                        key="dialog-element"
                        onMouseDown={[Function]}
                        role="document"
                        style={Object {}}
                        visible={true}
                      >
                        <div
                          className="rc-dialog "
                          onMouseDown={[Function]}
                          role="document"
                          style={Object {}}
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <div
                            className="rc-dialog-content"
                          >
                            <button
                              aria-label="Close"
                              className="rc-dialog-close"
                              onClick={[Function]}
                              type="button"
                            >
                              <span
                                className="rc-dialog-close-x"
                              />
                            </button>
                            <div
                              className="rc-dialog-header"
                            >
                              <div
                                className="rc-dialog-title"
                                id="rcDialogTitle1"
                              >
                                <Component>
                                  <h4
                                    className="modal-card-title is-4 pt-2 pb-2"
                                  />
                                </Component>
                              </div>
                            </div>
                            <div
                              className="rc-dialog-body"
                            >
                              <CallToAction
                                buttonDataTest="uinstallations-success-button"
                                buttonText="Back to List"
                                dataTest="uinstallations-success-message"
                                isCenter={true}
                                onButtonClick={[MockFunction]}
                                title="Success"
                              >
                                <div
                                  className=""
                                  data-test="uinstallations-success-message"
                                >
                                  <Component
                                    className="mb-0"
                                    message="Success"
                                    type="success"
                                  >
                                    <div
                                      className="notification is-success mb-0"
                                      data-test=""
                                      role="alert"
                                    >
                                      Success
                                    </div>
                                  </Component>
                                  <Component
                                    flexColumn={true}
                                    hasBackground={true}
                                    hasPadding={true}
                                  >
                                    <div
                                      className=""
                                    >
                                      <p>
                                        Peter's Properties
                                         has been successfully uninstalled
                                      </p>
                                      <div
                                        className="has-text-right"
                                      >
                                        <Component
                                          dataTest="uinstallations-success-button"
                                          onClick={[MockFunction]}
                                          type="button"
                                          variant="primary"
                                        >
                                          <button
                                            className="button  is-primary  "
                                            data-test="uinstallations-success-button"
                                            disabled={false}
                                            onClick={[MockFunction]}
                                            type="button"
                                          >
                                            Back to List
                                          </button>
                                        </Component>
                                      </div>
                                    </div>
                                  </Component>
                                </div>
                              </CallToAction>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </LazyRenderBox>
                    </AnimateChild>
                  </Animate>
                </div>
              </div>
            </Dialog>
          </Portal>
        </Portal>
      </PortalWrapper>
    </Component>
  </Component>
</Component>
`;

exports[`ClientAppUninstallConfirmation renderUninstallConfirmationModalFooter should match snapshot 1`] = `
<div>
  <div
    className="flex"
  >
    <Component
      dataTest="agree-btn"
      loading={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Confirm
    </Component>
    <Component
      dataTest="disagree-btn"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="danger"
    >
      Cancel
    </Component>
  </div>
</div>
`;

exports[`ClientAppUninstallConfirmation should match a snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "clientAppDetailRoute",
          "pathname": "/apps/:appid",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "clientAppDetailRoute",
              "pathname": "/apps/:appid",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "clientAppDetailRoute",
            "pathname": "/apps/:appid",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <AppUninstallConfirmation
        appDetailData={
          Object {
            "description": "enim facilisis",
            "developer": "Pete's Proptech World Ltd",
            "homePage": "http://myawesomeproptechproduct.io",
            "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
            "media": Array [
              Object {
                "description": "Application Icon",
                "type": "icon",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
              },
              Object {
                "description": "Application Image",
                "type": "image",
                "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
              },
            ],
            "name": "Peter's Properties",
            "scopes": Array [
              Object {
                "description": "Read data about developers",
                "name": "Marketplace/developers.read",
              },
              Object {
                "description": "Write data about developers",
                "name": "Marketplace/developers.write",
              },
            ],
            "summary": "vitae elementum curabitur vitae",
            "supportEmail": "support@reapit.com",
            "telephone": "0113 288 2900",
          }
        }
        closeUninstallConfirmationModal={[MockFunction]}
        visible={true}
      >
        <Component
          afterClose={[MockFunction]}
          footer={
            <div
              className="flex"
            >
              <Unknown
                dataTest="agree-btn"
                loading={false}
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Confirm
              </Unknown>
              <Unknown
                dataTest="disagree-btn"
                disabled={false}
                onClick={[MockFunction]}
                type="button"
                variant="danger"
              >
                Cancel
              </Unknown>
            </div>
          }
          isCentered={true}
          title="Confirm Peter's Properties uninstallation"
          visible={true}
        >
          <Component
            afterClose={[MockFunction]}
            className=""
            destroyOnClose={true}
            footer={
              <div
                className="flex"
              >
                <Unknown
                  dataTest="agree-btn"
                  loading={false}
                  onClick={[Function]}
                  type="button"
                  variant="primary"
                >
                  Confirm
                </Unknown>
                <Unknown
                  dataTest="disagree-btn"
                  disabled={false}
                  onClick={[MockFunction]}
                  type="button"
                  variant="danger"
                >
                  Cancel
                </Unknown>
              </div>
            }
            title={
              <Unknown>
                Confirm Peter's Properties uninstallation
              </Unknown>
            }
            visible={true}
            wrapClassName=""
          >
            <PortalWrapper
              visible={true}
            >
              <Portal
                getContainer={[Function]}
              >
                <Portal
                  containerInfo={
                    <div>
                      <div
                        class="rc-dialog-root"
                      >
                        <div
                          class="rc-dialog-mask"
                        />
                        <div
                          aria-labelledby="rcDialogTitle0"
                          class="rc-dialog-wrap "
                          role="dialog"
                          tabindex="-1"
                        >
                          <div
                            class="rc-dialog "
                            role="document"
                          >
                            <div
                              aria-hidden="true"
                              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                              tabindex="0"
                            />
                            <div
                              class="rc-dialog-content"
                            >
                              <button
                                aria-label="Close"
                                class="rc-dialog-close"
                                type="button"
                              >
                                <span
                                  class="rc-dialog-close-x"
                                />
                              </button>
                              <div
                                class="rc-dialog-header"
                              >
                                <div
                                  class="rc-dialog-title"
                                  id="rcDialogTitle0"
                                >
                                  <h4
                                    class="modal-card-title is-4 pt-2 pb-2"
                                  >
                                    Confirm Peter's Properties uninstallation
                                  </h4>
                                </div>
                              </div>
                              <div
                                class="rc-dialog-body"
                              >
                                Are you sure you wish to uninstall 
                                Peter's Properties
                                ? This action will uninstall the app for 
                                <b>
                                  all
                                </b>
                                 members of your organisation.
                              </div>
                              <div
                                class="rc-dialog-footer"
                              >
                                <div
                                  class="flex"
                                >
                                  <button
                                    class="button  is-primary  "
                                    data-test="agree-btn"
                                    type="button"
                                  >
                                    Confirm
                                  </button>
                                  <button
                                    class="button  is-danger  "
                                    data-test="disagree-btn"
                                    type="button"
                                  >
                                    Cancel
                                  </button>
                                </div>
                              </div>
                            </div>
                            <div
                              aria-hidden="true"
                              style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                              tabindex="0"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <Dialog
                    afterClose={[MockFunction]}
                    className=""
                    closable={true}
                    destroyOnClose={true}
                    focusTriggerAfterClose={true}
                    footer={
                      <div
                        className="flex"
                      >
                        <Unknown
                          dataTest="agree-btn"
                          loading={false}
                          onClick={[Function]}
                          type="button"
                          variant="primary"
                        >
                          Confirm
                        </Unknown>
                        <Unknown
                          dataTest="disagree-btn"
                          disabled={false}
                          onClick={[MockFunction]}
                          type="button"
                          variant="danger"
                        >
                          Cancel
                        </Unknown>
                      </div>
                    }
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    keyboard={true}
                    mask={true}
                    maskClosable={true}
                    prefixCls="rc-dialog"
                    switchScrollingEffect={[Function]}
                    title={
                      <Unknown>
                        Confirm Peter's Properties uninstallation
                      </Unknown>
                    }
                    visible={true}
                    wrapClassName=""
                  >
                    <div
                      className="rc-dialog-root"
                    >
                      <LazyRenderBox
                        className="rc-dialog-mask"
                        hiddenClassName="rc-dialog-mask-hidden"
                        key="mask"
                        style={Object {}}
                        visible={true}
                      >
                        <div
                          className="rc-dialog-mask"
                          style={Object {}}
                        />
                      </LazyRenderBox>
                      <div
                        aria-labelledby="rcDialogTitle0"
                        className="rc-dialog-wrap "
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        onMouseUp={[Function]}
                        role="dialog"
                        style={
                          Object {
                            "display": null,
                          }
                        }
                        tabIndex={-1}
                      >
                        <Animate
                          animation={Object {}}
                          component=""
                          componentProps={Object {}}
                          key="dialog"
                          onAppear={[Function]}
                          onEnd={[Function]}
                          onEnter={[Function]}
                          onLeave={[Function]}
                          showProp="visible"
                          transitionAppear={true}
                          transitionEnter={true}
                          transitionLeave={true}
                        >
                          <AnimateChild
                            animation={Object {}}
                            key="dialog-element"
                            transitionAppear={true}
                            transitionEnter={true}
                            transitionLeave={true}
                          >
                            <LazyRenderBox
                              className="rc-dialog "
                              key="dialog-element"
                              onMouseDown={[Function]}
                              role="document"
                              style={Object {}}
                              visible={true}
                            >
                              <div
                                className="rc-dialog "
                                onMouseDown={[Function]}
                                role="document"
                                style={Object {}}
                              >
                                <div
                                  aria-hidden="true"
                                  style={
                                    Object {
                                      "height": 0,
                                      "outline": "none",
                                      "overflow": "hidden",
                                      "width": 0,
                                    }
                                  }
                                  tabIndex={0}
                                />
                                <div
                                  className="rc-dialog-content"
                                >
                                  <button
                                    aria-label="Close"
                                    className="rc-dialog-close"
                                    onClick={[Function]}
                                    type="button"
                                  >
                                    <span
                                      className="rc-dialog-close-x"
                                    />
                                  </button>
                                  <div
                                    className="rc-dialog-header"
                                  >
                                    <div
                                      className="rc-dialog-title"
                                      id="rcDialogTitle0"
                                    >
                                      <Component>
                                        <h4
                                          className="modal-card-title is-4 pt-2 pb-2"
                                        >
                                          Confirm Peter's Properties uninstallation
                                        </h4>
                                      </Component>
                                    </div>
                                  </div>
                                  <div
                                    className="rc-dialog-body"
                                  >
                                    Are you sure you wish to uninstall 
                                    Peter's Properties
                                    ? This action will uninstall the app for 
                                    <b>
                                      all
                                    </b>
                                     members of your organisation.
                                  </div>
                                  <div
                                    className="rc-dialog-footer"
                                  >
                                    <div
                                      className="flex"
                                    >
                                      <Component
                                        dataTest="agree-btn"
                                        loading={false}
                                        onClick={[Function]}
                                        type="button"
                                        variant="primary"
                                      >
                                        <button
                                          className="button  is-primary  "
                                          data-test="agree-btn"
                                          disabled={false}
                                          onClick={[Function]}
                                          type="button"
                                        >
                                          Confirm
                                        </button>
                                      </Component>
                                      <Component
                                        dataTest="disagree-btn"
                                        disabled={false}
                                        onClick={[MockFunction]}
                                        type="button"
                                        variant="danger"
                                      >
                                        <button
                                          className="button  is-danger  "
                                          data-test="disagree-btn"
                                          disabled={false}
                                          onClick={[MockFunction]}
                                          type="button"
                                        >
                                          Cancel
                                        </button>
                                      </Component>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  aria-hidden="true"
                                  style={
                                    Object {
                                      "height": 0,
                                      "outline": "none",
                                      "overflow": "hidden",
                                      "width": 0,
                                    }
                                  }
                                  tabIndex={0}
                                />
                              </div>
                            </LazyRenderBox>
                          </AnimateChild>
                        </Animate>
                      </div>
                    </div>
                  </Dialog>
                </Portal>
              </Portal>
            </PortalWrapper>
          </Component>
        </Component>
        <Component
          afterClose={[Function]}
          appDetailData={
            Object {
              "description": "enim facilisis",
              "developer": "Pete's Proptech World Ltd",
              "homePage": "http://myawesomeproptechproduct.io",
              "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
              "media": Array [
                Object {
                  "description": "Application Icon",
                  "type": "icon",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
                },
                Object {
                  "description": "Application Image",
                  "type": "image",
                  "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
                },
              ],
              "name": "Peter's Properties",
              "scopes": Array [
                Object {
                  "description": "Read data about developers",
                  "name": "Marketplace/developers.read",
                },
                Object {
                  "description": "Write data about developers",
                  "name": "Marketplace/developers.write",
                },
              ],
              "summary": "vitae elementum curabitur vitae",
              "supportEmail": "support@reapit.com",
              "telephone": "0113 288 2900",
            }
          }
          onSuccessAlertButtonClick={[Function]}
          visible={false}
        >
          <Component
            hasHeader={false}
            isCentered={true}
            isPadding={false}
            onClose={[Function]}
            visible={false}
          >
            <Component
              className=""
              destroyOnClose={true}
              onClose={[Function]}
              title={<Unknown />}
              visible={false}
              wrapClassName=""
            >
              <PortalWrapper
                visible={false}
              />
            </Component>
          </Component>
        </Component>
      </AppUninstallConfirmation>
    </Router>
  </MemoryRouter>
</Provider>
`;
